Rafatoracao da classe Principal e criacao da classe VeiculoService